# leti-term03-AnDS

./: CMakeLists.txt  README.md
coursework/: CMakeLists.txt  application.cpp  application.h  input.txt  output.txt  report.docx
coursework/structures/: dsu.cpp  dsu.h  graph.cpp  graph.h
practice01/: CMakeLists.txt  README.md  application.cpp  application.h  rpn.h
practice01/structures/: dl_list.cpp  dl_list.h  dynamic_array.cpp  dynamic_array.h  stack.cpp  stack.h
practice02/: CMakeLists.txt  README.md  application.cpp  quicksort.h  sorts.h  timsort.h
practice02/stack/: stack.cpp  stack.h
practice03/: CMakeLists.txt  README.md  application.cpp  application.h  input.txt
practice03/trees/: avl-tree.cpp  avl-tree.h  bin-tree.cpp  bin-tree.h
